# poet-net

./: Pipfile  README.md  pyproject.toml
dataset_preparation/: README.md  create_parallel_corpus.py  download_taiga_ru_poetry.sh  libru_crawler.py  taiga_ru_json_generator.py  text_splitter.py
model_evaluation/: PoetryGenerator.py  domain_adaptaion.py
model_evaluation/data/: fontantka_headlines.txt
model_evaluation/models/rutp5/: config.json
model_trainer/: README.md  train.py
