[project]
name = "poet-net"
version = "0.1.0"
description = "Back-translation paraphrase generation for poetic text styling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "pandas",
    "requests",
    "rhymetagger",
    "transformers<5",
    "datasets",
    "tqdm",
    "lxml",
    "torch==1.11.0",
    "sentencepiece",
    "protobuf",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"] 
